[gd_scene load_steps=4 format=3 uid="uid://gxne80634uf"]

[ext_resource type="Script" path="res://main.gd" id="1_k1y1b"]
[ext_resource type="PackedScene" uid="uid://cq6hjli2fsa20" path="res://catcher/char.tscn" id="2_nvjoo"]
[ext_resource type="Script" path="res://address_input.gd" id="4_0sfk2"]

[node name="main" type="Node2D"]
position = Vector2(5, 7)
script = ExtResource("1_k1y1b")
player_scene = ExtResource("2_nvjoo")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")
spawn_limit = 4

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -8.0
offset_top = -4.0
offset_right = 1159.0
offset_bottom = 647.0

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_top = -6.0
offset_right = 1145.0
offset_bottom = 636.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="host" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "create room"

[node name="address_input" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
shortcut_context = NodePath("../../join")
text = "192.168.1.1"
script = ExtResource("4_0sfk2")

[node name="join" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "join"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/address_input" to="." method="_on_address_input_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/join" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/join" to="." method="_on_join_pressed"]
